Fixed issue with menubars being hidden by windows

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ body {
   background: rgba(0, 0, 0, 0.24);
 }
 
+.menu__content {
+  z-index: 2147483647;
+}
+
 #currentApp {
   -ms-user-select: none;
   -moz-user-select: none;
